# docs/openapi.json
@@ -6207,6 +6207,18 @@
 						"minLength": 1,
 						"maxLength": 50
 					},
+					"eatenAt": {
+						"anyOf": [
+							{
+								"type": "string",
+								"format": "date-time",
+								"pattern": "^(?:(?:\\d\\d[2468][048]|\\d\\d[13579][26]|\\d\\d0[48]|[02468][048]00|[13579][26]00)-02-29|\\d{4}-(?:(?:0[13578]|1[02])-(?:0[1-9]|[12]\\d|3[01])|(?:0[469]|11)-(?:0[1-9]|[12]\\d|30)|(?:02)-(?:0[1-9]|1\\d|2[0-8])))T(?:(?:[01]\\d|2[0-3]):[0-5]\\d:[0-5]\\d(?:\\.\\d+)?(?:Z|([+-](?:[01]\\d|2[0-3]):[0-5]\\d)))$"
+							},
+							{
+								"type": "null"
+							}
+						]
+					},
 					"source": {
 						"type": "string",
 						"enum": ["web", "ios", "android"]
@@ -6280,6 +6292,18 @@
 						"type": "string",
 						"minLength": 1,
 						"maxLength": 50
+					},
+					"eatenAt": {
+						"anyOf": [
+							{
+								"type": "string",
+								"format": "date-time",
+								"pattern": "^(?:(?:\\d\\d[2468][048]|\\d\\d[13579][26]|\\d\\d0[48]|[02468][048]00|[13579][26]00)-02-29|\\d{4}-(?:(?:0[13578]|1[02])-(?:0[1-9]|[12]\\d|3[01])|(?:0[469]|11)-(?:0[1-9]|[12]\\d|30)|(?:02)-(?:0[1-9]|1\\d|2[0-8])))T(?:(?:[01]\\d|2[0-3]):[0-5]\\d:[0-5]\\d(?:\\.\\d+)?(?:Z|([+-](?:[01]\\d|2[0-3]):[0-5]\\d)))$"
+							},
+							{
+								"type": "null"
+							}
+						]
 					},
 					"acknowledged": {
 						"type": "boolean"
@@ -9291,6 +9315,9 @@
 					"mealType": {
 						"type": ["string", "null"]
 					},
+					"eatenAt": {
+						"type": ["string", "null"]
+					},
 					"source": {
 						"type": ["string", "null"]
 					},
@@ -9335,6 +9362,7 @@
 					"photoUrls",
 					"date",
 					"mealType",
+					"eatenAt",
 					"source",
 					"resultSummary",
 					"createdEntryIds",
